# clawdevs-ai

./: .dockerignore  .env.example  .gitignore  CODE_OF_CONDUCT.md  IMPLEMENTATION-STATUS.md  LICENSE  Makefile  PHASE4_PLAN.md  README.md  ROLLOUT_STRATEGY.md  SECURITY.md  docker-compose.yaml  generate_agents.sh  pyproject.toml  tsconfig.json
.cursor/plans/: plano_clawdevs_fases_5ff4260b.plan.md  slack_ceo_diretor_integração_e3c32a52.plan.md
.githooks/: pre-merge-governance-check  pre-push
.github/workflows/: publish-openclaw-runtime.yml  publish-pod-images-on-tag.yml  qa-logs-monitor.yml  validate-deployment.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-runtime-foundation-sandbox/: 01-CONTEXT.md  01-DISCUSSION-LOG.md  01-PLAN.md
.planning/phases/02-memory-orchestration-loop/: 02-01-SUMMARY.md  02-03-SUMMARY.md  02-VERIFICATION.md
.planning/phases/03-monitoring-control-panel/: 03-01-PLAN.md  03-02-PLAN.md  03-03-PLAN.md  03-04-PLAN.md  03-CONTEXT.md  03-DISCUSSION-LOG.md  03-UAT.md  (+1 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
app/agents/: architect_worker.py  developer_worker.py  devops_worker.py  po_agent.py  po_worker.py
app/core/: orchestration.py
app/interfaces/: telegram_director.py
app/openclaw/output_schemas/: po.md  (+3 more)
app/runtime/: __init__.py  check_stack.py  openclaw_assets.py  openclaw_client.py  openclaw_output.py  openclaw_session.py  stream_worker.py  tool_registry.py  tools.py
config/openclaw/: README.md  openclaw.local.json5
container/: kustomization.yaml
container/base/: ollama-pod.yaml  openclaw-pod.yaml  panel-admin-credentials-secret.yaml  panel-agent-credentials-secret.yaml
control-panel/backend/: .dockerignore  Dockerfile  MIGRATIONS.md  RAG_SETUP.md  pyproject.toml
control-panel/frontend/: .dockerignore  Dockerfile  next.config.ts  orval.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
control-panel/scripts/: smoke-test.sh
docker/: .env.container-legacy
docker/clawdevs-nemoclaw/: Dockerfile  bridge.py  entrypoint.sh
docker/clawdevs-openclaw/: Dockerfile  entrypoint.sh
docker/ollama-runtime/: Dockerfile  start-ollama.sh
docker/openclaw-runtime/: Dockerfile  README.md
docker/postgres-runtime/: Dockerfile
docker/redis-runtime/: Dockerfile
docker/searxng-proxy/: Dockerfile  default.conf
docker/searxng-runtime/: Dockerfile
docs/: 06-operacoes.md  07-configuracao-e-prompts.md  21-gpu-cdi-windows.md  37-deploy-fase0-telegram-ceo-ollama.md  39-consumer-groups-pipeline-revisao.md  41-fase1-agentes-soul-pods.md  42-fluxo-e2e-operacao-2fa.md  42-slack-tokens-setup.md  43-autonomia-nivel-4-matriz-escalonamento.md  INDEX.md  README.md  analise-codigo-vs-docs-fluxo.md  analise-projeto.md  aplicacao-e-exemplos.md  compaction-policy.md  engenharia-de-prompts.md  openclaw-agent-template-hardening-validation.md  runtime-roadmap.md  workspace-arquivos-agente.md
docs/05-tools-and-skills/: 21-github-ssh-setup.md
docs/08-technical-notes/: ceo-po-conversa-slack.md  developer-nao-responde-slack.md  investigacao-devops-repos-github.md  workspace-compartilhado-repositorio-ceo.md
docs/agentes/: README.md  arquiteto.md  ceo.md  dba_data_engineer.md  dev_backend.md  dev_frontend.md  dev_mobile.md  devops_sre.md  memory_curator.md  po.md  qa_engineer.md  security_engineer.md  ux_designer.md
docs/guides/: setup.md
docs/issues/: 035-qa-auditor-divida-tecnica.md  036-digest-diario-alertas.md  validacao-fase3-completa.md
docs/plans/: 2026-03-21-browser-web-search-design.md  2026-03-21-web-search-implementation.md  2026-03-23-bugfix-plan.md  2026-03-25-tasks-first-design.md  2026-03-25-tasks-first-implementation.md  2026-03-30-autonomous-health-repair-design.md  2026-03-31-openclaw-agents-refactoring-design.md
governance/: escrita-humanizada.md
k8s/: .env.example  README.md  kustomization.yaml  networkpolicy-allow-egress.yaml  ollama-pod.yaml  openclaw-pod.yaml  stack-host-ollama.yaml  stack.yaml
k8s/base/: generate-agent-token-job.yaml  kustomization.yaml  networkpolicy-allow-egress.yaml  ollama-pod.yaml  ollama-pvc.yaml  openclaw-pod.yaml  panel-agent-credentials-secret.yaml  searxng-deployment.yaml
k8s/developer/: README.md
k8s/development-team/: README.md  configmap.yaml
k8s/devops/: cronjob-auto-update.yaml
k8s/governance-team/: configmap.yaml
k8s/management-team/: configmap.yaml
k8s/ollama/: deployment.yaml  secret.yaml.example
k8s/openclaw/: configmap.yaml  deployment.yaml  workspace-ceo-configmap.yaml
k8s/soul/: README.md  configmap.yaml
orchestrator/consumers/: base_consumer.py  circuit_breaker.py  review_pipeline.py
orchestrator/gateway/: balancer.py  gateway.py
scripts/: _validate_dockerfile.py  auto-update.sh  check_links.py  developer_worker.py  gpu_lock.py  load-env.sh  m4a_to_md.py  monitor-compression.sh  ollama-ensure-cloud-auth.sh  ollama-signin.sh  orchestration_phase3.py  orchestrator_autonomy.py  phase3-production-validation.sh  run-openclaw-telegram-ollama.sh  setup.sh  slot_revisao_pos_dev.py  test_minikube_slot.sh
scripts/cluster/: secrets-from-env.sh  up.sh
scripts/docker/: confirm-yes.sh  generate-panel-token.sh  run-nemoclaw.sh  run-openclaw.sh  sync-agent-config.sh  up-all.sh  up-service.sh
scripts/ops/: slack-developer-check.sh
scripts/utils/: shared.sh  validate-workspace.sh
security/sandbox/: quarantine_pipeline.py
skills/: INSTALLED.md
skills/freeride/: SKILL.md
skills/skill-creation/: SKILL.md
skills/skill-discovery/: SKILL.md
tests/: conftest.py  test_balancer.py  test_base_consumer.py  test_circuit_breaker.py  test_elite_memory.py  test_gateway.py  test_gpu_lock.py  test_orchestration.py  test_quarantine_pipeline.py  test_review_pipeline.py  test_runtime.py
tools/browser/: SKILL.md
tools/gh/: SKILL.md
tools/markdown_converter/: SKILL.md
tools/ollama_skill/: SKILL.md
tools/opencode/: SKILL.md
tools/summarize/: SKILL.md
(+711 files in other folders)
