# pyproject.toml — ClawDevs
# Configuração centralizada de build, linting, testes e qualidade de código.
# Referência: https://packaging.python.org/en/latest/guides/writing-pyproject-toml/

# ─── Build System ─────────────────────────────────────────────────────────────

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

# ─── Metadados do Projeto ─────────────────────────────────────────────────────

[project]
name = "clawdevs"
version = "0.1.0"
description = "ClawDevs — Enxame autônomo de agentes de IA para desenvolvimento de software."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["ai", "agents", "llm", "orchestration", "devops"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]

# Dependências de runtime (mínimas e versionadas)
dependencies = [
    "redis>=7.0.0",
    "requests>=2.31.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.0",
    "structlog>=24.1.0",
    "lancedb>=0.6.0",
    "tqdm>=4.66.0",
]

# Dependências opcionais por grupo
[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "types-requests>=2.31.0",
    "types-PyYAML>=6.0.0",
]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
]
lint = [
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

# ─── Setuptools ───────────────────────────────────────────────────────────────

[tool.setuptools.packages.find]
where = ["."]
include = ["orchestrator*", "memory*", "security*", "soul*", "tools*", "config*", "scripts*", "agents*"]
exclude = ["tests*", ".venv*"]

[tool.setuptools.package-data]
"*" = ["py.typed", "*.yaml", "*.yml", "*.json"]

# ─── Pytest ───────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
# Cobertura mínima obrigatória: 85%
# Se a cobertura for inferior a 85%, o pytest encerra com exit code != 0 (erro)
addopts = [
    "--cov=.",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-report=xml:coverage.xml",
    "--cov-fail-under=85",
    "--tb=short",
    "--strict-markers",
    "-v",
]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: testes unitários (sem dependências externas)",
    "integration: testes de integração (requerem Redis, etc.)",
    "slow: testes lentos (omitir com -m 'not slow')",
]
# Warnings que devem virar erros
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# ─── Coverage ─────────────────────────────────────────────────────────────────

[tool.coverage.run]
source = ["."]
branch = true          # Mede cobertura de branches (if/else), não só linhas
parallel = false
omit = [
    ".venv/*",
    "venv/*",
    "tests/*",
    "*/__pycache__/*",
    "*/migrations/*",
    "setup.py",
    "pyproject.toml",
    "scripts/*",
    "docs/*",
    "k8s/*",
]

[tool.coverage.report]
fail_under = 85        # Exceção se cobertura < 85%
show_missing = true
skip_covered = false
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "@(abc\\.)?abstractmethod",
    "\\.\\.\\.",
]

[tool.coverage.html]
directory = "htmlcov"
title = "ClawDevs — Relatório de Cobertura"

[tool.coverage.xml]
output = "coverage.xml"

# ─── Ruff (Linter + Formatter) ────────────────────────────────────────────────

[tool.ruff]
target-version = "py311"
line-length = 100
indent-width = 4
src = ["orchestrator", "memory", "security", "soul", "tools", "config", "agents", "tests"]
exclude = [
    ".venv",
    ".git",
    ".ruff_cache",
    ".mypy_cache",
    ".pytest_cache",
    "__pycache__",
    "dist",
    "build",
    "htmlcov",
    "docs",
    "k8s",
    "scripts/_validate_dockerfile.py",  # script temporário de validação
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "S",    # flake8-bandit (security)
    "T20",  # flake8-print (evitar print em prod)
    "SIM",  # flake8-simplify
    "ANN",  # flake8-annotations (type hints)
    "RUF",  # regras específicas do Ruff
]
ignore = [
    "ANN101",  # self não precisa de type hint
    "ANN102",  # cls não precisa de type hint
    "ANN401",  # permite Any quando necessário
    "S101",    # permite assert em testes
    "T201",    # permite print em scripts utilitários
    "B008",    # permite function calls em default args (FastAPI/Depends)
]
fixable = ["ALL"]
unfixable = []
[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "ANN", "T20", "SIM117"]
"scripts/**/*.py" = ["T201", "ANN", "S", "SIM", "N806", "B904", "E741"]

[tool.ruff.lint.isort]
known-first-party = ["orchestrator", "memory", "security", "soul", "tools", "config", "agents"]
force-sort-within-sections = true
split-on-trailing-comma = true

[tool.ruff.lint.pep8-naming]
classmethod-decorators = ["classmethod", "pydantic.validator", "pydantic.root_validator"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Path"]

[tool.ruff.lint.pylint]
max-args = 8
max-branches = 12
max-returns = 6

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"
docstring-code-format = true
docstring-code-line-length = 80

# ─── Mypy (Checagem de Tipos) ─────────────────────────────────────────────────

[tool.mypy]
python_version = "3.11"
strict = false                    # Não strict total; habilitar gradualmente
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
disallow_untyped_defs = true      # Funções devem ter type hints
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
ignore_missing_imports = true     # Libs sem stubs não bloqueiam o build
show_error_codes = true
pretty = true
exclude = [
    "^.venv/",
    "^docs/",
    "^k8s/",
    "^scripts/",
    "^htmlcov/",
]

# Módulos que ainda não têm stubs (ignorar individualmente)
[[tool.mypy.overrides]]
module = ["redis.*", "lancedb.*", "structlog.*", "tqdm.*"]
ignore_missing_imports = true
